// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main app bar component app bar indented when drawer is open 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-47",
    "button": "MainAppBar-button-50",
    "grow": "MainAppBar-grow-48",
    "hide": "MainAppBar-hide-53",
    "menuButton": "MainAppBar-menuButton-51",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-52",
    "root": "MainAppBar-root-46",
    "titleButton": "MainAppBar-titleButton-49",
  },
  "darkMode": false,
  "drawerOpen": true,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component app bar renders correctly 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-2",
    "button": "MainAppBar-button-5",
    "grow": "MainAppBar-grow-3",
    "hide": "MainAppBar-hide-8",
    "menuButton": "MainAppBar-menuButton-6",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-7",
    "root": "MainAppBar-root-1",
    "titleButton": "MainAppBar-titleButton-4",
  },
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component does not render Help button when feature is false 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-17",
    "button": "MainAppBar-button-20",
    "grow": "MainAppBar-grow-18",
    "hide": "MainAppBar-hide-23",
    "menuButton": "MainAppBar-menuButton-21",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-22",
    "root": "MainAppBar-root-16",
    "titleButton": "MainAppBar-titleButton-19",
  },
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": false,
  "singlePluginLogo": false,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;

exports[`Main app bar component uses single plugin logo when feature is true 1`] = `
Object {
  "classes": Object {
    "appBar": "MainAppBar-appBar-32",
    "button": "MainAppBar-button-35",
    "grow": "MainAppBar-grow-33",
    "hide": "MainAppBar-hide-38",
    "menuButton": "MainAppBar-menuButton-36",
    "menuButtonPlaceholder": "MainAppBar-menuButtonPlaceholder-37",
    "root": "MainAppBar-root-31",
    "titleButton": "MainAppBar-titleButton-34",
  },
  "darkMode": false,
  "drawerOpen": false,
  "highContrastMode": false,
  "homepageUrl": undefined,
  "loading": true,
  "loggedIn": true,
  "logo": undefined,
  "manageCookies": [Function],
  "navigateToAdminPage": [Function],
  "navigateToHelpPage": [Function],
  "navigateToHome": [Function],
  "plugins": Array [],
  "res": undefined,
  "showAdminPageButton": true,
  "showHelpPageButton": true,
  "singlePluginLogo": true,
  "toggleDarkMode": [Function],
  "toggleDrawer": [Function],
  "toggleHelp": [Function],
  "toggleHighContrastMode": [Function],
}
`;
